--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -1,10 +1,45 @@
 ﻿<Window x:Class="StudentID.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Student Data Processor" Height="450" Width="800">
+        Title="Student Data Processor" Height="600" Width="1000">
     <Grid>
         <Button Content="Select Excel File" HorizontalAlignment="Left" VerticalAlignment="Top" Width="150" Margin="10,10,0,0" Command="{Binding LoadFileCommand}" />
-        <Button Content="Export to Excel" HorizontalAlignment="Left" VerticalAlignment="Top" Width="150" Margin="170,10,0,0" Command="{Binding ExportToFileCommand}" />
-        <DataGrid ItemsSource="{Binding Students}" AutoGenerateColumns="True" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,50,0,0" Width="760" Height="350" />
+        <Button Content="Upload Photos" HorizontalAlignment="Left" VerticalAlignment="Top" Width="150" Margin="170,10,0,0" Command="{Binding UploadPhotosCommand}" />
+        <Button Content="Export to Excel" HorizontalAlignment="Left" VerticalAlignment="Top" Width="150" Margin="330,10,0,0" Command="{Binding ExportToFileCommand}" />
+
+        <DataGrid ItemsSource="{Binding Students}" AutoGenerateColumns="False" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,50,0,0" Width="960" Height="500">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="100"/>
+                <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="150"/>
+                <DataGridTextColumn Header="Gender" Binding="{Binding Gender}" Width="100"/>
+                <DataGridTextColumn Header="Admission Number" Binding="{Binding AdmissionNumber}" Width="150"/>
+                <DataGridTextColumn Header="ID Number" Binding="{Binding IdNumber}" Width="150"/>
+                <DataGridTextColumn Header="Course" Binding="{Binding Course}" Width="100"/>
+                <DataGridTextColumn Header="Expiry Date" Binding="{Binding ExpiryDate}" Width="150"/>
+
+                <!-- Display the Student Photo -->
+                <DataGridTemplateColumn Header="Photo" Width="200">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Image Source="{Binding PhotoPath}" Width="200" Height="200" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+                <!-- Action Buttons for each Photo -->
+                <DataGridTemplateColumn Header="Actions" Width="200">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <Button Content="Crop" Command="{Binding DataContext.CropPhotoCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" CommandParameter="{Binding AdmissionNumber}" />
+                                <Button Content="Delete" Command="{Binding DataContext.DeletePhotoCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" CommandParameter="{Binding AdmissionNumber}" />
+                                <Button Content="Reupload" Command="{Binding DataContext.ReuploadPhotoCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" CommandParameter="{Binding AdmissionNumber}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
+
